# simulacrum-stories

./: .env.example  .gitattributes  .gitignore  BACKUP.md  CLAUDE.md  README.md  pyproject.toml
.claude/: .gitignore
config/: audio-budget.json
docs/: README.md  audio-production-pipeline.md  audio-spotting-notes.md  companion-helen-liu-research-notes.md  companion-saltmere-map.md  content-strategy.md  enhancement-roadmap.md  episode-length-extension-strategy.md  production-status.md  saltmere-ambient-sources.md  saltmere-character-prompts.md  saltmere-sonic-palette-prompts.md  saltmere-story-bible.md  saltmere-suno-prompts.md  saltmere-tabletop-scenario.md  saltmere-voice-casting.md  series-enrichment-strategy.md
scripts/: add-chapter-feedback.py  align-timing.py  analyze-break-points.py  backup-audio.sh  daily-production.py  diagnose_audio_production.py  doc-to-audio.py  export-word-timing.py  fix-section-breaks.py  fix-sections-refined.py  generate-chapter-audio.py  generate-chapter-bumpers.sh  generate-podcast-feed.py  generate-read-pages.py  get-next-episode-context.py  launch-batch.py  mix-enhanced-chapter.sh  mix-title-with-bumper.py  package-audiobook.py  parse-manuscript-sections.py  publish-feeds.sh  reassemble-chapters.py  rebuild-with-correct-breaks.py  regenerate-title-cards.py  scheduler-daemon.py  status.sh  test-word-sync.py  timing-report.py  transcribe-audio.py  update-chapter-html.py  update-series-registry.py  validate-word-sync.py  wrap-chapter-words.py
site/: index.html  netlify.toml  package-lock.json  package.json  vite.config.js
(+141 files in other folders)
